# llama.qtcreator

./: CMakeLists.txt  LICENSE  LlamaCpp.json.in  README.md  llama.qrc  llamachateditor.cpp  llamachateditor.h  llamachatinput.cpp  llamachatinput.h  llamachatmanager.cpp  llamachatmanager.h  llamachatmessage.cpp  llamachatmessage.h  llamaconstants.h  llamaconversationsmodel.cpp  llamaconversationsmodel.h  llamaconversationsview.cpp  llamaconversationsview.h  llamahtmlhighligher.cpp  llamahtmlhighlighter.h  llamaicons.h  llamalocatorfilter.cpp  llamalocatorfilter.h  llamamarkdownwidget.cpp  llamamarkdownwidget.h  llamaplugin.cpp  llamaplugin.h  llamaprojectpanel.cpp  llamaprojectpanel.h  llamasearchtoolbar.cpp  llamasearchtoolbar.h  llamasettings.cpp  llamasettings.h  llamaspinner.cpp  llamaspinner.h  llamaspinner.json  llamastorage.cpp  llamastorage.h  llamasyntaxhighligher.cpp  llamasyntaxhighlighter.h  (+12 more)
.github/: FUNDING.yml
.github/workflows/: build_cmake.yml
tests/: CMakeLists.txt  llamatools_test.cpp
tests/coreplugin/: documentmanager.h
tests/projectexplorer/: project.h  projectmanager.h
tools/: askuser_tool.cpp  askuser_tool.h  build_project_tool.cpp  build_project_tool.h  create_directory_tool.cpp  create_directory_tool.h  editfile_tool.cpp  editfile_tool.h  factory.h  list_issues_tool.cpp  list_issues_tool.h  list_project_tool.cpp  list_project_tool.h  listdir_tool.cpp  listdir_tool.h  open_project_tool.cpp  open_project_tool.h  python_tool.cpp  python_tool.h  readfile_tool.cpp  readfile_tool.h  regexsearch_tool.cpp  regexsearch_tool.h  run_project_tool.cpp  run_project_tool.h  tool.cpp  tool.h  tool_utils.cpp  tool_utils.h
translations/: CMakeLists.txt  llamacpp_cs.ts  llamacpp_da.ts  llamacpp_de.ts  llamacpp_en.ts  llamacpp_fr.ts  llamacpp_hr.ts  llamacpp_ja.ts  llamacpp_pl.ts  llamacpp_ru.ts  llamacpp_sl.ts  llamacpp_sv.ts  llamacpp_uk.ts  llamacpp_untranslated.ts  llamacpp_zh_CN.ts  llamacpp_zh_TW.ts
